@@ -3,7 +3,7 @@ import java.util.Date;
 import java.text.SimpleDateFormat;
 import java.util.Locale;
 
-public class EjInformacionFichero {
+public class EjemploInformacionFichero {
     public static void main(String[] args) {
         String ruta = "src";
 
@@ -17,9 +17,8 @@ public class EjInformacionFichero {
             System.out.println("\tPuede modificar: " + f.canWrite());
             System.out.println("\tEs archivo: " + f.isFile());
             System.out.println("\tEs oculto: " + f.isHidden());
-            // Para formatear la fecha de modificacion con el formato dd de mes de año en
-            // español
-            SimpleDateFormat formateador = new SimpleDateFormat("dd 'de' MMMM 'de' yyyy", new Locale("es", "ES"));
+            // Para formatear la fecha de modificacion con el formato dd de mes de año
+            SimpleDateFormat formateador = new SimpleDateFormat("dd 'de' MMMM 'de' yyyy", Locale.of("es", "ES"));
             System.out.println("\tModificado por última vez: " +
                     formateador.format(new Date(f.lastModified())));
             System.out.println("\tEs directorio: " + f.isDirectory());
